--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          # This is the line we changed
+          token: ${{ secrets.METRICS_TOKEN }}
+          
           user: Sadikn7i
           base: ""
           plugin_languages: yes
