--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # This is the line we changed
+          # This is the most important line.
+          # It MUST use your powerful secret token.
           token: ${{ secrets.METRICS_TOKEN }}
           
           user: Sadikn7i
