--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,27 +1,23 @@
-name: GitHub Metrics
-on:
-  schedule: [{cron: "0 0 * * *"}]
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
-jobs:
-  metrics:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
+# .github/workflows/metrics.yml
+# ...
     steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          
           user: Sadikn7i
-          base: ""
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_ignored: >-
-            jupyter notebook
-          plugin_languages_limit: 8
-          plugin_languages_layout: compact
-          template: classic
-          
-          # This line has been updated for Japan
+          template: github_dark
           config_timezone: Asia/Tokyo
+
+          # This line adds a base section for your profile stats
+          base: header, activity, community
+
+          # Language plugin with a custom title
+          plugin_languages: yes
+          plugin_languages_limit: 8
+          plugin_languages_title: "My Favorite Languages"
+
+          # Add a plugin for total lines of code
+          plugin_lines: yes
+
+          # Add an isometric contribution calendar
+          plugin_isocalendar: yes
