--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,19 +1,41 @@
-# .github/workflows/metrics.yml
-# ... (keep the top part of your file the same)
+name: Improved GitHub Metrics
+on:
+  schedule: [{cron: "0 0 * * *"}]
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
+
+jobs:
+  metrics:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # This token is necessary for the stats to be accurate.
           token: ${{ secrets.METRICS_TOKEN }}
           user: Sadikn7i
-          
-          # Change this line to use a new theme
-          template: dracula
-          
-          # You can also add animations
+
+          # --- General Appearance ---
+          # Use a popular, stylish theme. Other options: dracula, gruvbox, github_dark
+          template: classic
+          # Using the tokyonight theme for a better look
+          template: tokyonight
+          config_timezone: Asia/Tokyo
           config_animations: yes
+
+          # --- Plugins & Layout ---
+          # This section includes multiple plugins for a richer display.
+          base: header, activity, community
           
-          base: ""
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+
           plugin_languages: yes
           plugin_languages_limit: 8
-          plugin_languages_layout: compact
-          config_timezone: Asia/Tokyo
+          plugin_languages_threshold: 0%
+          plugin_languages_ignored: jupyter notebook
+
+          plugin_lines: yes
+          plugin_lines_history_limit: 1
+          plugin_lines_sections: "changed, added, removed"
