--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,16 +13,33 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          
+          # Basic config
           user: Sadikn7i
-          template: classic   # <-- changed here
+          template: classic
+          base: header, activity, community
           config_timezone: Asia/Tokyo
           config_animations: yes
-          base: header, activity, community
+          
+          # Isometric calendar plugin
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
+          
+          # Languages plugin
           plugin_languages: yes
           plugin_languages_limit: 8
           plugin_languages_threshold: 0%
+          plugin_languages_sections: most-used
+          plugin_languages_colors: github
+          plugin_languages_indepth: yes
+          plugin_languages_details: bytes-size, percentage
+          
+          # Lines plugin
           plugin_lines: yes
           plugin_lines_history_limit: 1
-          plugin_lines_sections: "changed, added, removed"
+          plugin_lines_sections: repositories
+          plugin_lines_repositories_limit: 4
+          
+          # Commit settings
+          committer_branch: main
+          committer_message: "Update metrics"
