--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-         token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.METRICS_TOKEN }}
           
           # Basic config
           user: Sadikn7i
