--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,8 +1,8 @@
-name: Improved GitHub Metrics
+name: GitHub Metrics
 on:
   schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: {branches: ["main"]}
 
 jobs:
   metrics:
@@ -10,36 +10,32 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Generate Metrics
+        uses: lowlighter/metrics@latest
         with:
-        token: ${{ secrets.METRICS_TOKEN }}
+          # Use GitHub token (no need for METRICS_TOKEN)
+          token: ${{ secrets.METRICS_TOKEN }}
           
           # Basic config
           user: Sadikn7i
           template: classic
           base: header, activity, community
           config_timezone: Asia/Tokyo
-          config_animations: yes
           
-          # Isometric calendar plugin
+          # Isometric calendar
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           
-          # Languages plugin
+          # Languages
           plugin_languages: yes
           plugin_languages_limit: 8
           plugin_languages_threshold: 0%
-          plugin_languages_sections: most-used
           plugin_languages_colors: github
-          plugin_languages_indepth: yes
-          plugin_languages_details: bytes-size, percentage
+          plugin_languages_sections: most-used
+          plugin_languages_indepth: no
           
-          # Lines plugin
+          # Lines of code
           plugin_lines: yes
-          plugin_lines_history_limit: 1
           plugin_lines_sections: repositories
           plugin_lines_repositories_limit: 4
-          
-          # Commit settings
-          committer_branch: main
-          committer_message: "Update metrics"
+
