--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,12 +27,13 @@ jobs:
           
           # Languages plugin
           plugin_languages: yes
-          plugin_languages_limit: 8
+          plugin_languages_limit: 12
           plugin_languages_threshold: 0%
           plugin_languages_sections: most-used
           plugin_languages_colors: github
           plugin_languages_indepth: yes
           plugin_languages_details: bytes-size, percentage
+          plugin_languages_ignored: Jupyter Notebook
           
           # Lines plugin
           plugin_lines: yes
